--- a/website/index1.html
+++ b/website/index1.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 <body>
@@ -5,11 +6,29 @@
 <title>about me</title>
 <link rel="stylesheet" href="style1.css">
 </head>
+<style>
+.abc a:hover{
+  color:blue;
+  background-color:red;
+  text-align:left;
+}
+.mno{
+   text-align:center;
+   color:purple;
+}
+.mno img{
+  border:2px solid white;
+  padding:2px;
+}
+</style>
 <h1>MY INFORMATION</h1>
 <hr>
+<div class="abc">
 <a href="hobbies.html">hobbies</a>
 <a href="contact.html">contact</a>
 <a href="summary.html">summary</a>
+</div>
+<div class="mno">
 <h2>Ⓜ️ M.A.SHELKE</h2><br>
 <img src="C:\Users\admin\OneDrive\Pictures\WhatsApp Image 2025-04-10 at 09.58.12_ac68fadb.jpg" width="150px" height="150px"><br>
 <br>
@@ -17,6 +36,7 @@
 Name: Mayuri Angad shelke<br><br>
 Age: 19yr<br><br>
 BOD: 22/07/2006<br>
+</div>
 <hr>
 </body>
 </html>
