--- a/website/hobbies.html
+++ b/website/hobbies.html
@@ -19,11 +19,17 @@
  h2 {
      margin-top: 10;
 }
+.abc a:hover{
+   color:purple;
+   background-color:red;
+}
 </style>
 <body>
+<div class="abc">
 <a href="index1.html">index</a>
 <a href="contact.html">contact</a>
 <a href="summary.html">summary</a>
+</div>
 <hr>
 <h1>My Hobbies</h1>
 <hr>
