--- a/website/summary.html
+++ b/website/summary.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -16,11 +15,17 @@ h2{
 li{
    color:purple;
 }
+.abc a:hover{
+   color:purple;
+   background-color:red;
+}
 </style>
 <body>
+<div class="abc">
 <a href="index1.html">index</a>
 <a href="contact.html">contact</a>
 <a href="hobbies.html">hobbies</a>
+</div>
 <hr>
 <h1>short summary</h1>
 <hr>
